# yStrokey

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/src/: autostart.rs  logger.rs  main.rs  settings_io.rs  settings_window.rs  tray.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  event.rs  key.rs  lib.rs  state.rs
crates/input/: Cargo.toml
crates/input/src/: clipboard.rs  ime.rs  keyboard.rs  lib.rs  privacy.rs
crates/render/: Cargo.toml
crates/render/src/: d2d.rs  lib.rs  window.rs
